remove tickets div

--- a/index.html
+++ b/index.html
@@ -75,18 +75,7 @@ title: Open Data Day Münster 2017
     </p>
 
     <h3>Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day über Meetup (am Ende dieser Seite) ist freiwillig, hilft uns aber bei der besseren Planung.<br> Die Teilnahme ist kostenlos! Wer keine Lust hat, sich einen Meetup Account zu machen, kann uns auch tweeten oder eine E-Mail schreiben an <pre>muenster [at] codefor [punkt] de</pre>.</p>
-    <br/>
-    <br/>
-    <br/>
+    <p>Die Anmeldung zum Open Data Day über <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" target="_blank">Meetup Seite</a> ist freiwillig, hilft uns aber bei der besseren Planung.<br /><strong>Die Teilnahme ist kostenlos!</strong><br />Wer keine Lust hat, sich einen Meetup Account zu machen, kann uns auch tweeten oder eine E-Mail schreiben an: <pre>muenster [at] codefor [punkt] de</pre></p>
   </div>
-
-  <div id="tickets">
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/2012676015776998360572/api/mu.btns.js?id=nf6jigvggg4lhdvj4jpdg3092j";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
-    <h3>Anmeldung</h3>
-    <p>Die Anmeldung erfolgt entweder über die <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" target="_blank">Meetup Seite</a>, oder über diesen Button:</p>
-    <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" data-event="236074849" class="mu-rsvp-btn">RSVP</a>
-  </div>
-
 </div>
 
