update ODD content

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@ title: Open Data Day Münster 2017
 <div id="home">
   <h3>Open Data Day 2017</h3>
   <h1>Tag der offenen Daten</h1>
-  <h2>Münster, Samstag 4.3.2017</h2>
+  <h2>Forum zur Bürgerbeteiligung in Münster</h2>
+  <h2>Samstag, 4. März 2017</h2>
   <hr/>
   <div id="intro">
-    <p>Am Samstag den 4. März 2017 treffen sich weltweit Bürger, um sich für Open Data nützlich zu machen. Auch in Münster organisieren wir wieder ein Event. Wir laden Entwickler, Designer, Open-Data-Interessierte, Geographen, Stadtentwickler, Journalisten und Aktivisten herzlich ein, sich zu beteiligen!</p>
+    <p>Am Samstag, den 4. März 2017 treffen sich weltweit Bürger und Bürgerinnen, um sich zum Thema
+      Offene Daten weiterzubilden oder für ihre Kommune neue Anwendungen mit Offenen Daten zu entwickeln.<br />
+      Auch in Münster sind wir dabei.<br />
+      <b>Dieses Jahr legen wir den Fokus auf das Thema "Bürgerbeteiligung".</b>
+      Wir wollen den Samstag in lockerer Atmosphäre mit Vorträgen rund um die Themen
+       Open Data / Open Government / Citizen Science und Bürgerbeteiligung verbringen.
+
+      Wir laden BürgerInnen, Open-Data-Interessierte, StadtentwicklerInnen,
+       JournalistInnen und AktivistInnen herzlich ein, sich zu beteiligen!</p>
 
     <div class="twocolumn">
       <div class="twocolumn">
@@ -21,29 +30,34 @@ title: Open Data Day Münster 2017
         <p>VHS Forum<br>
         Aegidimarkt 4<br>
         48143 Münster</p>
+        <br />
       </div>
+
       <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=7.621606886386871%2C51.959605695633044%2C7.624289095401763%2C51.96084033701785&amp;layer=mapnik&amp;marker=51.96022219417608%2C7.622947990894318" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=51.96022&amp;mlon=7.62295#map=19/51.96022/7.62295">Auf OpenStreetMap anzeigen</a></small>
     </div>
 
     <div class="twocolumn">
-      <h3>Themen:</h3>
+      <h3>Themen und Vorträge:</h3>
       <ul>
-        <li>"MachmitMünster" - Hintergründe zum Projekt für Bürgerbeteiligung</li>
-        <li>"Verkehrsunfälle in Münster" - eine Open Data Horrorstory</li>
+        <li><b>"MachmitMünster"</b> - Hintergründe zum Projekt für Bürgerbeteiligung</li>
+        <li><b>"MünsterWiki"</b> - Die von Bürgern erstellte, freie Enzyklopädie</li>
+        <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münser</li>
+        <li><b>"Verkehrsunfälle in Münster"</b> - eine Open Data Horrorstory</li>
         <li>"Bürgerbeteiligung und Open Government in Münster" - Status Quo</li>
-        <li>"senseBox/openSenseMap" - Citizen Science Wetterstation</li>
-        <li>"Münsteraner Künstler bei den Skulptur-Projekten 2017" - Vortrag vom Intitiator des Projektes SchattenSkulptur - Bürgerbeiteiligung bei den Skulptur-Projekten</li>
+</ul>
+<p> &nbsp; Ca. um 13:00 Uhr Mittgspause mit Pizza.<br /> &nbsp; Am Nachmittag:</p>
+<ul>
+        <li><b>"Münsteraner Künstler bei den Skulptur-Projekten 2017"</b> - Vortrag und Workshop vom Intitiator des Projektes "SchattenSkulptur" über Bürgerbeiteiligung bei den Skulptur-Projekten</li>
       </ul>
     </div>
 
-    <h3>Ist das was für mich?</h3>
+    <h3>Ist das etwas für mich?</h3>
     <p>
-      <b>Ich interessiere mich für Transparenz und möchte mich zivil engagieren.</b><br>
-        Ja! Du kannst bei laufenden Projekten oder neuen Projekten, die auf dem Open Data Day entstehen, mithelfen und Ideen geben.<br><br>
-      <b>Ich bin Journalist und kann Excel, aber das reicht nicht immer.</b><br>
-        Ja! Wir zeigen Programme und Tools und wie man sie nutzen kann.<br><br>
-      <b>Open Data? Datenjournalismus? Das hab ich noch nie gehört.</b><br>
-        Ja! Das Thema geht alle an und hier kannst du lernen warum.<br><br>
+      <b>Ich interessiere mich für Transparenz und möchte mich in Münster engagieren.</b><br>
+        Ja! Du kannst dich nicht nur über Möglichkeiten und laufende Projekte informieren, sondern auch mitmachen und Ideen geben.<br><br>
+      <b>Open Data? Citizen Science? Open Government? Das hab ich noch nie gehört.</b><br>
+        Ja! Diese Themen gehen alle etwas an und können uns helfen, die Gestaltung unserer Stadt selbst in die Hand zu nehmen.<br><br>
+
     </p>
 
     <h3>Orga Team: </h3>
@@ -59,4 +73,3 @@ title: Open Data Day Münster 2017
     <p>Die Anmeldung zum Open Data Day über <a href="https://www.meetup.com/OK-Lab-Munster/events/236074849/" target="_blank">Meetup Seite</a> ist freiwillig, hilft uns aber bei der besseren Planung.<br /><strong>Die Teilnahme ist kostenlos!</strong><br />Wer keine Lust hat, sich einen Meetup Account zu machen, kann uns auch tweeten oder eine E-Mail schreiben an: <pre>muenster [at] codefor [punkt] de</pre></p>
   </div>
 </div>
-
