--- a/index.html
+++ b/index.html
@@ -39,15 +39,20 @@ title: Open Data Day Münster 2017
     <div class="twocolumn">
       <h3>Themen und Vorträge:</h3>
       <ul>
-        <li><b>"MachmitMünster"</b> - Hintergründe zum Projekt für Bürgerbeteiligung</li>
-        <li><b>"MünsterWiki"</b> - Die von Bürgern erstellte, freie Enzyklopädie</li>
-        <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münser</li>
+        <li><b>Grußwort</b> des Landtagsabgeordneten Thomas Marquardt</li>
+        <li><b>"MachmitMünster"</b> - Hintergründe zum Projekt für Bürgerbeteiligung von Heiko Phillipski und Marc Weßeling</li>
+        <li><b>"MünsterWiki"</b> - Die von Bürgern erstellte, freie Enzyklopädie. Vortrag und Fragerunde mit Klaus Otto Nagorsnik vom
+   Verein Bürgernetz e. V.</li>
+        <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münster</li>
         <li><b>"Verkehrsunfälle in Münster"</b> - eine Open Data Horrorstory</li>
         <li>"Bürgerbeteiligung und Open Government in Münster" - Status Quo</li>
 </ul>
 <p> &nbsp; Ca. um 13:00 Uhr Mittgspause mit Pizza.<br /> &nbsp; Am Nachmittag:</p>
 <ul>
-        <li><b>"Münsteraner Künstler bei den Skulptur-Projekten 2017"</b> - Vortrag und Workshop vom Intitiator des Projektes "SchattenSkulptur" über Bürgerbeiteiligung bei den Skulptur-Projekten</li>
+        <li><b>"Münsteraner Künstler bei den Skulptur-Projekten 2017"</b> - Jochen Kubeja vom Wohnzimmer e.V. wird als Praxisbeispiel
+   zur Teilhabe in der Kunst das Projekt "Schatten-Skulptura" vorstellen. Hier
+   können sich Münsteraner KünstlerInnen bei den Skulptur-Projekten 2017
+   beteiligen. Dazu wird es außerdem einen Workshop geben.</li>
       </ul>
     </div>
 
