missing bold tag

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Open Data Day Münster 2017
    Verein Bürgernetz e. V.</li>
         <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münster</li>
         <li><b>"Verkehrsunfälle in Münster"</b> - eine Open Data Horrorstory</li>
-        <li>"Bürgerbeteiligung und Open Government in Münster" - Status Quo</li>
+        <li><b>"Bürgerbeteiligung und Open Government in Münster"</b> - Status Quo</li>
 </ul>
 <p> &nbsp; Ca. um 13:00 Uhr Mittgspause mit Pizza.<br /> &nbsp; Am Nachmittag:</p>
 <ul>
