--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ title: Open Data Day Münster 2017
         <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münster</li>
         <li><b>"Verkehrsunfälle in Münster"</b> - eine Open Data Horrorstory</li>
         <li><b>"Bürgerbeteiligung und Open Government in Münster"</b> - Status Quo</li>
+        <li><b>"Roboterbau in der Schule"</b> - Technikunterricht in der Mittelstufe von Ansgar Jansen</li>
 </ul>
 <p> &nbsp; Ca. um 13:00 Uhr Mittgspause mit Pizza.<br /> &nbsp; Am Nachmittag:</p>
 <ul>
