added Wunderbox, corrected end time

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Open Data Day Münster 2017
       <div class="twocolumn">
         <h3>Wann:</h3>
         <p>Samstag, 4. März 2017<br>
-        10 bis 18 Uhr</p>
+        10 bis 16 Uhr</p>
       </div>
       <div class="twocolumn">
         <h3>Wo:</h3>
@@ -45,6 +45,7 @@ title: Open Data Day Münster 2017
    Verein Bürgernetz e. V.</li>
         <li><b>"senseBox/openSenseMap"</b> - Die Citizen Science Wetterstation aus Münster</li>
         <li><b>"Verkehrsunfälle in Münster"</b> - eine Open Data Horrorstory</li>
+        <li><b>"Wunderbox: Status und Weiterentwicklung"</b> - ein Projekt der Open Data Community und Open.NRW, vorgestellt von Thore Fechner</li>
         <li><b>"Bürgerbeteiligung und Open Government in Münster"</b> - Status Quo</li>
         <li><b>"Roboterbau in der Schule"</b> - Technikunterricht in der Mittelstufe von Ansgar Jansen</li>
 </ul>
