update topic and agenda

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Open Data Day Münster 2018
+odd_topic: Offene Daten - Was wünschen sich die Bürgerinnen und Bürger der Stadt Münster?
 odd_year: 2018
 odd_date: 3. März
 odd_weekday: Samstag
@@ -17,14 +18,40 @@ odd_where_osm_link_external: https://www.openstreetmap.org/?mlat=51.96162&amp;ml
 odd_meetup_link: https://www.meetup.com/OK-Lab-Munster/events/236074849/
 
 odd_agenda:
-  - start: "10:15"
-    end: "10:??"
-    title: bla
-    subtitle: blabla
-  - start: "10:30"
-    end: "11:00"
-    title: foo
-    subtitle: barbaz
+  - start: "??:??"
+    end: "??:??"
+    title: Begrüßung
+    subtitle: und Rückblick auf das Jahr 2017 von Code for Münster
+  - start: "??:??"
+    end: "??:??"
+    title: Impulsvortrag Offene Daten in Münster
+    subtitle: "&ndash; Stefan Schoenfelder, Betriebsleiter der citeq"
+  - start: "??:??"
+    end: "??:??"
+    title: Pilotprojekt
+    subtitle: Offene Daten zum Thema Familie &ndash; Astrid Reich, Ansprechpartnerin für Open Data bei der Citeq
+  - start: "??:??"
+    end: "??:??"
+    title: Rückblick Münsterhack
+    subtitle: "&ndash; Vorstellung des Projektes &#147;mein-ms&#148;"
+  - start: "??:??"
+    end: "??:??"
+    title: Verkehrsdaten Fahrrad/Auto
+    subtitle: "&ndash; Thomas und Thorben"
+  - start: "??:??"
+    end: "??:??"
+    title: Mittagspause
+    subtitle: "&ndash; Pizza und Plausch"
+  - start: "??:??"
+    end: "??:??"
+    title: Rückblick Schattenskulptura
+    subtitle: "&ndash; Offene und Selbstorganisierte Alternative zu Skulpturprojekten 2017 (Jochen Kubeja)"
+  - start: "??:??"
+    end: "??:??"
+    title: World café/Lean Coffee Offene Daten
+    subtitle: "&ndash; Was wünschen sich die Bürgerinnen und Bürger der Stadt Münster?"
+
+
 
 ---
 <div id="home">
@@ -36,8 +63,8 @@ odd_agenda:
   <div id="intro">
     <p>Am {{ page.odd_weekday }}, den {{ page.odd_date }} {{ page.odd_year }} treffen sich weltweit Bürger und Bürgerinnen, um sich zum Thema
       Offene Daten weiterzubilden oder für ihre Kommune neue Anwendungen mit Offenen Daten zu entwickeln.<br />
-      Auch in Münster sind wir dabei.<br />
-      <b>Der Fokus liegt in Münster dieses Mal auf das Thema "???".</b>
+      Auch in Münster sind wir dabei.<br /></p>
+    <p style="text-align: center"><b>Das Thema dieses Jahr lautet:<br />&bdquo;{{ page.odd_topic }}&ldquo;.</b>
 <!--
 <style>
 div.articlelink {
