--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ odd_agenda:
        An diesem internationalen Tag der offenen Daten soll rund um die Welt durch verschiedene Aktivitäten auf die
        Bedeutung offener Daten hingewiesen werden.
        Der Open Data Day ist eine gute Gelegenheit, um auf die Vorteile offener Daten hinzuweisen und den Stellenwert
-       innerhalb von Verwaltung, der Wirtschaft und der Zivilgesellschaft zu erhöhen.
-       Auch in diesem Jahr werden sich Bürgerinnen und Bürger treffen, um sich zum Thema Offene Daten weiterzubilden
+       innerhalb von Verwaltung, Wirtschaft und Zivilgesellschaft zu erhöhen.
+       Auch in diesem Jahr treffen sich Menschen, um sich über das Thema Offene Daten zu informieren
        oder für ihre Gemeinschaft neue Anwendungen mit Offenen Daten zu entwickeln.
        </p>
     <!-- <p>Am {{ page.odd_weekday }}, den {{ page.odd_date }} {{ page.odd_year }} treffen sich weltweit Bürger und Bürgerinnen,
@@ -143,11 +143,18 @@ div.articlelink {
       <b>Ich interessiere mich für Transparenz und möchte mich in Münster engagieren.</b><br>
         Ja! Du kannst dich nicht nur über Möglichkeiten und laufende Projekte informieren, sondern auch mitmachen und Ideen geben.<br><br>
       <b>Open Data? Citizen Science? Open Government? Das hab ich noch nie gehört.</b><br>
-        Ja! Diese Themen gehen alle etwas an und können uns helfen, die Gestaltung unserer Stadt selbst in die Hand zu nehmen.<br><br>
+        Ja! Diese Themen gehen Alle etwas an und können uns helfen, die Gestaltung unserer Stadt selbst in die Hand zu nehmen.<br><br>
     </p>
 
     <h3 id="anmeldung">Anmeldung</h3>
-    <p>Die Anmeldung zum Open Data Day über <a href="{{ page.odd_meetup_link }}" target="_blank">Meetup Seite</a> ist freiwillig, hilft uns aber bei der besseren Planung.<br /><strong>Die Teilnahme ist kostenlos!</strong><br />Wer keine Lust hat, sich einen Meetup Account zu machen, kann uns auch tweeten oder eine E-Mail schreiben an: <pre>muenster [at] codefor [punkt] de</pre></p>
+    <p>Die Anmeldung zum Open Data Day über unsere
+      <a href="{{ page.odd_meetup_link }}" target="_blank">Meetup Seite</a>
+      ist freiwillig, hilft uns aber bei der besseren Planung.
+      <br />
+      <strong>Die Teilnahme ist kostenlos!</strong>
+      <br />Wer keine Lust hat, sich einen Meetup Account zu machen,
+      kann uns auch tweeten oder eine E-Mail an schreiben an: <pre style="display: inline">muenster [at] codefor [punkt] de</pre>
+    </p>
 
     <h3>Orga Team: </h3>
     <p>
