--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ odd_agenda:
   - start: "??:??"
     end: "??:??"
     title: Pilotprojekt
-    subtitle: Offene Daten zum Thema Familie &ndash; Astrid Reich, Ansprechpartnerin für Open Data bei der Citeq
+    subtitle: Offene Daten zum Thema Familie &ndash; Astrid Reich, Ansprechpartnerin für Open Data bei der citeq
   - start: "??:??"
     end: "??:??"
-    title: Rückblick Münsterhack
+    title: Rückblick MÜNSTERHACK
     subtitle: "&ndash; Vorstellung des Projektes &#147;mein-ms&#148;"
   - start: "??:??"
     end: "??:??"
