--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ odd_agenda:
   - start: "??:??"
     end: "??:??"
     title: Rückblick Schattenskulptura
-    subtitle: "&ndash; Offene und Selbstorganisierte Alternative zu Skulpturprojekten 2017 (Jochen Kubeja)"
+    subtitle: "&ndash; Offene und selbstorganisierte Alternative zu den Skulpturprojekten 2017 (Jochen Kubeja)"
   - start: "??:??"
     end: "??:??"
     title: World café/Lean Coffee Offene Daten
@@ -62,7 +62,7 @@ odd_agenda:
   <div class="nav">
     <ul>
       <a href="#intro"><li>Was ist das?</li></a>
-      <a href="#wann-und-wo"><li>Wann und Wo?</li></a>
+      <a href="#wann-und-wo"><li>Wann und wo?</li></a>
       <a href="#fuer-wen"><li>Für wen ist das?</li></a>
       <a href="#anmeldung"><li>Anmeldung &amp; Weitere Informationen</li></a>
     </ul>
@@ -71,7 +71,7 @@ odd_agenda:
     <p>Am {{ page.odd_weekday }}, den {{ page.odd_date }} {{ page.odd_year }} findet wieder der Open Data Day statt.
        An diesem internationalen Tag der offenen Daten soll rund um die Welt durch verschiedene Aktivitäten auf die
        Bedeutung offener Daten hingewiesen werden.
-       Der Open Data Day ist eine gute Gelegenheit, um auf die Vorteile offener Daten hinzuweisen und den Stellenwert
+       Der Open Data Day ist eine gute Gelegenheit, um die Vorteile offener Daten aufzuzeigen und den Stellenwert
        innerhalb von Verwaltung, Wirtschaft und Zivilgesellschaft zu erhöhen.
        Auch in diesem Jahr treffen sich Menschen, um sich über das Thema Offene Daten zu informieren
        oder für ihre Gemeinschaft neue Anwendungen mit Offenen Daten zu entwickeln.
@@ -143,13 +143,13 @@ div.articlelink {
       <b>Ich interessiere mich für Transparenz und möchte mich in Münster engagieren.</b><br>
         Ja! Du kannst dich nicht nur über Möglichkeiten und laufende Projekte informieren, sondern auch mitmachen und Ideen geben.<br><br>
       <b>Open Data? Citizen Science? Open Government? Das hab ich noch nie gehört.</b><br>
-        Ja! Diese Themen gehen Alle etwas an und können uns helfen, die Gestaltung unserer Stadt selbst in die Hand zu nehmen.<br><br>
+        Ja! Diese Themen gehen alle etwas an und helfen uns, die Gestaltung unserer Stadt selbst in die Hand zu nehmen.<br><br>
     </p>
 
     <h3 id="anmeldung">Anmeldung</h3>
     <p>Die Anmeldung zum Open Data Day über unsere
       <a href="{{ page.odd_meetup_link }}" target="_blank">Meetup Seite</a>
-      ist freiwillig, hilft uns aber bei der besseren Planung.
+      ist freiwillig, hilft uns aber besser zu planen.
       <br />
       <strong>Die Teilnahme ist kostenlos!</strong>
       <br />Wer keine Lust hat, sich einen Meetup Account zu machen,
