offene Daten -> Offene Daten

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ odd_agenda:
 ---
 <div id="home">
   <h3>Open Data Day {{ page.odd_year }}</h3>
-  <h1>Tag der offenen Daten</h1>
+  <h1>Tag der Offenen Daten</h1>
   <h2>{{ page.odd_topic }}</h2>
   <h3>{{ page.odd_weekday }}, {{ page.odd_date }} {{ page.odd_year }} &ndash; {{ page.odd_where_room }}, {{ page.odd_where_venue }}</h3>
   <div class="nav">
@@ -69,9 +69,9 @@ odd_agenda:
   </div>
   <div id="intro">
     <p>Am {{ page.odd_weekday }}, den {{ page.odd_date }} {{ page.odd_year }} findet wieder der Open Data Day statt.
-       An diesem internationalen Tag der offenen Daten soll rund um die Welt durch verschiedene Aktivitäten auf die
-       Bedeutung offener Daten hingewiesen werden.
-       Der Open Data Day ist eine gute Gelegenheit, um die Vorteile offener Daten aufzuzeigen und den Stellenwert
+       An diesem internationalen Tag der Offenen Daten soll rund um die Welt durch verschiedene Aktivitäten auf die
+       Bedeutung Offener Daten hingewiesen werden.
+       Der Open Data Day ist eine gute Gelegenheit, um die Vorteile Offener Daten aufzuzeigen und den Stellenwert
        innerhalb von Verwaltung, Wirtschaft und Zivilgesellschaft zu erhöhen.
        Auch in diesem Jahr treffen sich Menschen, um sich über das Thema Offene Daten zu informieren
        oder für ihre Gemeinschaft neue Anwendungen mit Offenen Daten zu entwickeln.
