fix title of head of citeq talk

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ odd_agenda:
     subtitle: und Rückblick auf das Jahr 2017 von Code for Münster
   - start: "??:??"
     end: "??:??"
-    title: Impulsvortrag Offene Daten in Münster
+    title: Impulsvortrag Digitale Stadt Münster
     subtitle: "&ndash; Stefan Schoenfelder, Betriebsleiter der citeq"
   - start: "??:??"
     end: "??:??"
