--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ odd_agenda:
        Der Open Data Day ist eine gute Gelegenheit, um die Vorteile Offener Daten aufzuzeigen und den Stellenwert
        innerhalb von Verwaltung, Wirtschaft und Zivilgesellschaft zu erhöhen.
        Auch in diesem Jahr treffen sich Menschen, um sich über das Thema Offene Daten zu informieren
-       oder für ihre Gemeinschaft neue Anwendungen mit Offenen Daten zu entwickeln.
+       und für ihre Gemeinschaft neue Anwendungen mit Offenen Daten zu entwickeln.
        </p>
     <!-- <p>Am {{ page.odd_weekday }}, den {{ page.odd_date }} {{ page.odd_year }} treffen sich weltweit Bürger und Bürgerinnen,
       um sich zum Thema Offene Daten weiterzubilden oder für ihre Kommune neue Anwendungen mit Offenen Daten zu entwickeln.<br />
