--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ odd_where_city: 48143 Münster
 odd_where_osm_link_iframe: https://www.openstreetmap.org/export/embed.html?bbox=7.62628734111786%2C51.961027100424346%2C7.629728615283967%2C51.96220716271855&amp;layer=mapnik&amp;marker=51.96161713545464%2C7.6280079782009125
 odd_where_osm_link_external: https://www.openstreetmap.org/?mlat=51.96162&amp;mlon=7.62801#map=19/51.96162/7.62801
 odd_meetup_link: https://www.meetup.com/OK-Lab-Munster/events/247319063/
+odd_eventbrite_link: https://www.eventbrite.de/e/tag-der-offenen-daten-2018-tickets-43356746195
 
 odd_agenda:
   - start: "??:??"
@@ -153,7 +154,9 @@ div.articlelink {
       <br />
       <strong>Die Teilnahme ist kostenlos!</strong>
       <br />Wer keine Lust hat, sich einen Meetup Account zu machen,
-      kann uns auch tweeten oder eine E-Mail an schreiben an: <pre style="display: inline">muenster [at] codefor [punkt] de</pre>
+      kann sich auch über
+      <a href="{{ page.odd_eventbrite_link }}" target="_blank">Eventbrite</a> anmelden,
+      tweeten oder uns eine E-Mail an <pre style="display: inline">muenster [at] codefor [punkt] de</pre> schreiben.
     </p>
 
     <h3>Orga Team: </h3>
