add folie with bürgerworkshopresults

--- a/vortraege-2018/mein-ms/index.html
+++ b/vortraege-2018/mein-ms/index.html
@@ -187,6 +187,29 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
 
 </section>
 
+
+<section class="stack future" data-previous-indexv="0" style="top: 0px; display: block;">
+
+    <section class="future">
+        <h1>Datensatz-Ideen</h1>
+        <ul>
+          <li><a href="img/worldcafe-ergebnisse.jpg">Ergebnisse Bürgerworkshop</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Ideen Bürgerworkshop</h2>
+        <ul>
+          <li>Defibrillatoren</li>
+          <li>Weihnachtsmarktstände</li>
+          <li>Grillplätze</li>
+          <li>Mobilität: E-Ladesäulen, Fahrradausleihe, Carsharing, Parken</li>
+          <li>Barrierefreie ÖPNV-Haltestellen</li>
+        </ul>
+    </section>
+
+</section>
+
 <!-- ************************************************************************* -->
 
 <section class="future" style="top: -337.5px; display: block;">
