--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ div.articlelink {
       <br/>
       <small><a href="http://www.openstreetmap.org/?mlat=51.96022&amp;mlon=7.62295#map=19/51.96022/7.62295">Auf OpenStreetMap anzeigen</a></small>
       -->
-      <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="{{ page.odd_where_osm_link_iframe }}" style="border: 1px solid black"></iframe>
+      <iframe  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="{{ page.odd_where_osm_link_iframe }}" style="border: 1px solid black"></iframe>
       <br/>
       <small><a href="{{ page.odd_where_osm_link_external }}">Auf OpenStreetMap anzeigen</a></small>
     </div>
