fix social buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                <a class="bd-tw-button is-info button" data-social-network="Twitter" data-social-action="tweet" data-social-target="#" target="_blank" href="https://twitter.com/intent/tweet?text=get free bulma templates:;url=https://github.com/BulmaTemplates/bulma-templates">
+                                <a class="bd-tw-button is-info button" data-social-network="Twitter" 
+                                data-social-action="tweet" data-social-target="#" target="_blank" 
+                                href="https://twitter.com/intent/tweet?text=Open Data Day Münster 2020:;url=https://codeformuenster.org/opendataday">
                                     <span class="icon">
                                         <i class="fab fa-twitter"></i>
                                     </span>
@@ -49,7 +51,7 @@
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-danger" href="https://github.com/BulmaTemplates/bulma-templates">
+                                <a class="button is-danger" href="https://www.meetup.com/OK-Lab-Munster/">
                                     <span class="icon">
                                         <i class="fas fa-download"></i>
                                     </span>
