fix meetup button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Bulma Version 0.8.x-->
         <link rel='stylesheet prefetch' href='https://unpkg.com/bulma@0.8.0/css/bulma.min.css'>
         <link rel="stylesheet" href="2020/tabs.css">
-        <script src="https://kit.fontawesome.com/7dc3015a44.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/bcf2340ef3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <nav class="navbar is-dark is-fixed-top">
@@ -51,11 +51,11 @@
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-danger" href="https://www.meetup.com/OK-Lab-Munster/">
+                                <a class="button is-danger" href="https://www.meetup.com/de-DE/OK-Lab-Munster/events/268677903">
                                     <span class="icon">
-                                        <i class="fas fa-download"></i>
+                                        <i class="fab fa-meetup"></i>
                                     </span>
-                                    <span>Meetup.com</span>
+                                    <span>meetup.com</span>
                                 </a>
                             </p>
                         </div>
@@ -395,7 +395,14 @@ geplant ist.
                     <br /><br />
                     <h2>Anmeldung</h2>
 
-                    Die Anmeldung zum Open Data Day über unsere Meetup Seite ist freiwillig, hilft uns aber besser zu planen.
+                    Die Anmeldung zum Open Data Day über 
+                    <a href="https://www.meetup.com/de-DE/OK-Lab-Munster/events/268677903">
+                        <span class="icon">
+                            <i class="fab fa-meetup"></i>
+                        </span>
+                        <span>meetup.com</span>
+                    </a>
+                     ist freiwillig, hilft uns aber besser zu planen.
                     Die Teilnahme ist kostenlos!
 
                     <h1>Orga Team:</h1>
