fix wrong vortrag

--- a/index.html
+++ b/index.html
@@ -184,9 +184,14 @@
                                 <div class="media-content">
                                     <div class="content">
                                         <p>
-                                            <strong>Smart Home</strong>
+                                            <strong>Was ist eigentlich ein Algorithmus?</strong>
                                             <span class="room"><i>13:00 Uhr - </i>Q-THEK / ERKER </span>
-                                            Ein Vortrag zum Thema Smart Home
+                                            Algorithmen und algorithmische Systeme prägen immer stärker unseren zunehmend digitalisierten Alltag. 
+                                            An vielen Stellen sind sie die Basis, auf der Entscheidungen getroffen und Angebote entwickelt werden 
+                                            – ohne dass es uns, den Betroffenen, klar ist. 
+                                            Grund genug zu fragen, was man eigentlich unter einem Algorithmus versteht. 
+                                            B. Sc. Erik Roguschke führt in das Thema ein und geht auch auf die aktuellen 
+                                            digitalen Entwicklungen ein.
                                         </p>
                                     </div>
                                 </div>
@@ -404,13 +409,9 @@ geplant ist.
                     </a>
                      ist freiwillig, hilft uns aber besser zu planen.
                     Die Teilnahme ist kostenlos!
-
-                    <h1>Orga Team:</h1>
-
-                    @codeformuenster<br />
-                    @ubergesundheit<br />
-                    @webwurst<br />
-                    @toms_rocket
+<br /><br />
+                    Weitere Informationen gibt es auch auf der Homepage der Stadtbücherei: 
+                    <a href="https://www.stadt-muenster.de/buecherei/startseite/open-data-day-2020.html">Open Data Day 2020 - Webseite bei der Stadtbücherei Münster</a>
                 </div>
             </div>
         </section>
