add ODD image that everybody else has, too

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="hero-body">
                 <div class="container">
                     <br /><br />
-                    <div class="columns">
+                    <div class="columns is-mobile is-vcentered">
                         <div class="column is-narrow">
                             <img class="muensterlogo" src="2020/muenster-rathaus.jpg" />
                         </div>
@@ -78,6 +78,9 @@
                             <h2 class="subtitle">
                             Samstag, 7. März &nbsp; - &nbsp; Stadtbücherei Münster
                             </h2>
+                        </div>
+                        <div class="column is-hidden-mobile">
+                            <img style="max-width:400px" src="2020/odd-image.jpg">
                         </div>
                     </div>
                 </div>
