--- a/vortraege-2021/rueckblick-muenster-2020.html
+++ b/vortraege-2021/rueckblick-muenster-2020.html
@@ -115,15 +115,20 @@ class: center, middle
 
 ???
 
-Notes for the _first_ slide!
+Speaker-Reihenfolge:
+Folie 1+2 TW
+Folie 3   GP
+Folie 4+5 TT
+Folie 6+7 GP
+Dann      TW
 
 ---
 
 # Agenda
 
 1. Kurz notiert
-2. Münster zählt
-3. Leezenflow
+2. Leezenflow
+3. Münster zählt
 4. Meine Stadt Transparent
 5. Diskussion
 
@@ -133,48 +138,56 @@ Notes for the _first_ slide!
 .left-column[
   <img src="opendatabot.jpg" width="200">
   <img src="muenster-was-geht.jpg" width="200">
-  <img src="klimawatch.jpg" width="200">
+  <img src="stadtradeln-heatmap.png" width="200">
 ]
 .right-column[
 #### 1. Open Data Münster Twitter Bot 👍
 Seit März 2020 automatische Tweets bei neuen Daten im open-Data-Portal
 
-#### 2. Münster was geht?
+#### 2. Münster was geht? 👎
 Münsterhack 2020: Veranstaltungsempfehlungen a la Tinder, powered by open-data
 
-#### 3. Klimawatch update
-Klimawatch: 9 neue Städte, 3 in der Pipeline, Hilfe gern gesehen
+#### 3. Stadtradeln-Visualisierung 👍
+Eine Stadt mit vielen RadfahrerInnen
 ]
 ---
 
 # kurz notiert 2/2
 .left-column[
-  <img src="stadtradeln-heatmap.png" width="200">
+  <img src="klimawatch.jpg" width="200">
   <img src="unfaelle.jpg" width="200">
   <img src="ab-street.jpg" width="200">
 ]
 .right-column[
-#### 4. Stadtradeln-Visualisierung
-Eine Stadt mit vielen RadfahrerInnen
+#### 4. Klimawatch update 👍
+Klimawatch: 9 neue Städte, 3 in der Pipeline, Hilfe gern gesehen
 
-#### 5. Update der Unfall-Visualisierung
+#### 5. Update der Unfall-Visualisierung 🤞
 Unfallvisualisierung mit Daten seit 2007; leider ab 2019 nur Daten mit weniger Details vom Unfallatlas NRW
 
-#### 6. AB-Street
+#### 6. AB-Street 🤞
 Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Computerspiel, powered by open data, WIP
 ]
 ---
 
-# Münster.jetzt
+# Münster.jetzt 👍
+
+.left-column[
+  <img src="muenster-jetzt1.png" width="200">
+  <img src="muenster-jetzt2.jpg" width="200">
+]
+.right-column[
 
 - Ursprünglich Projekt vom Münsterhack 2019
 - Wurde aufgenommen bei "Zukunftsbahnof Münster" 2020
-- Termine auf Info-Bildschirmen am Banhof ausspielen
+- Termine auf Info-Bildschirmen am Bahnhof ausspielen
 - Software-Prototyp wurde gebaut, Umsetzung wurde von der DB gefördert
 
+]
 ---
 
-# Leezenflow
+# Leezenflow 👍
+
 .left-column[
 ![](https://raw.githubusercontent.com/codeformuenster/opendataday/gh-pages/vortraege-2021/leezenflow.jpg)
 ]
@@ -187,7 +200,7 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
 ]
 ---
 
-# Meine Stadt Transparent: Ratsinformationssystem für Menschen
+# Meine Stadt Transparent: Ratsinformationssystem für Menschen 🤞
 .left-column[
 ![](https://raw.githubusercontent.com/codeformuenster/opendataday/gh-pages/vortraege-2021/meine-stadt-transparent.jpg)
 ]
@@ -207,8 +220,8 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
  - Daten verfügbar
  - Einfache Technik
  - Engagiertes Team
+ - Kooperationen (Uni, FH, Stadt, ...)
  - Unternehmen, das das Thema übernimmt
- - Kooperation mit der Uni
  - Förderung / Sonstige verfügbare Geldmittel
 
 </div>
@@ -221,6 +234,19 @@ Wie wäre es, wenn ich hier die Ampelschaltung ändere? Verkehrsplanung als Comp
  - Projekt-Team hört auf
 
 </div>
+---
+
+# Idee für Verstetigung
+
+* Jedes Projekt ist individuell
+* Es braucht einen festgelegten Rahmen
+* Und verlässliche Partner, auf deren Schultern die Verantwortung verteilt wird
+* ..und Unterstützung bei der "Partnersuche"
+
+### Idee "Digitale Spielwiese"
+* "Technischer Pate"
+* "Inhaltlicher Pate"
+* "Monetärer Pate"
 
 ---
 
